<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/ivBack"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginStart="@dimen/margin_5dp"
            android:layout_marginTop="@dimen/margin_5dp"
            android:layout_marginBottom="@dimen/margin_5dp"
            app:srcCompat="@drawable/ic_arrow_back" />

        <TextView
            android:id="@+id/tvLevelName"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:paddingStart="0dp"
            android:paddingEnd="@dimen/margin_24dp"
            android:text="TextView"
            android:textColor="@color/white"
            android:textSize="@dimen/textSize_18sp"
            android:textStyle="bold" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@color/black"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout"
        tools:context=".SettingActivity">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginTop="@dimen/margin_5dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center_vertical"
                android:paddingStart="@dimen/margin_8dp"
                android:paddingEnd="0dp"
                android:text="@string/rotation"
                android:textColor="@color/white"
                android:textSize="@dimen/textSize_20sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.1"
                android:gravity="center_vertical"
                android:text="@string/colon"
                android:textColor="@color/white"
                android:textSize="@dimen/textSize_20sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/etRotation"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@null"
                android:hint="90"
                android:paddingStart="@dimen/margin_8dp"
                android:paddingEnd="0dp"
                android:textColor="@color/white"
                android:textColorHint="#5A5959"
                android:textSize="@dimen/textSize_16sp" />
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/white" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center_vertical"
                android:paddingStart="@dimen/margin_8dp"
                android:paddingEnd="0dp"
                android:text="@string/regulation"
                android:textColor="@color/white"
                android:textSize="@dimen/textSize_20sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.1"
                android:gravity="center_vertical"
                android:text="@string/colon"
                android:textColor="@color/white"
                android:textSize="@dimen/textSize_20sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/etRegulation"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@null"
                android:hint="1280x720"
                android:paddingStart="@dimen/margin_8dp"
                android:paddingEnd="0dp"
                android:textColor="@color/white"
                android:textColorHint="#5A5959"
                android:textSize="@dimen/textSize_16sp" />
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/white" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center_vertical"
                android:paddingStart="@dimen/margin_8dp"
                android:paddingEnd="0dp"
                android:text="@string/brightness"
                android:textColor="@color/white"
                android:textSize="@dimen/textSize_20sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.1"
                android:gravity="center_vertical"
                android:text="@string/colon"
                android:textColor="@color/white"
                android:textSize="@dimen/textSize_20sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/etBrightness"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@null"
                android:hint="90"
                android:paddingStart="@dimen/margin_8dp"
                android:paddingEnd="0dp"
                android:textColor="@color/white"
                android:textColorHint="#5A5959"
                android:textSize="@dimen/textSize_16sp" />
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/white" />


        <Button
            android:id="@+id/buttonSubmit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/margin_16dp"
            android:background="@color/colorPrimary"
            android:gravity="center"
            android:paddingStart="@dimen/margin_32dp"
            android:paddingEnd="@dimen/margin_32dp"
            android:text="@string/submit"
            android:textColor="@color/white"
            android:textStyle="bold" />

        <ProgressBar
            android:id="@+id/progressBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="gone"/>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>